Fix crosses alignment on expand buttons for civio/presupuesto-management#1256

--- a/static/stylesheets/scss/theme.scss
+++ b/static/stylesheets/scss/theme.scss
@@ -48,3 +48,11 @@
 .body-glossary .glossary-terms h3:before {
   color: $brand-highlight-dark;
 }
+
+
+// Fix cross alignment issue on buttons
+table.table-grid tr td .toggle.expand,table.table-grid tr td .toggle.collapse {
+  line-height: 16px;
+  padding:  0 0 2px 0;
+  font-size: 20px;
+}
